--- a/templates/admin/addmovies.html
+++ b/templates/admin/addmovies.html
@@ -30,7 +30,10 @@
                 <label class="custom-label"><b>Release Date</b></label>
                 <input class="custom-input" type="text" name="releasedate" placeholder="Release Date">
             </div>
-
+            <div class="custom-inputfield">
+                <label class="custom-label"><b>Description</b></label>
+                <textarea class="custom-textarea" name="description" placeholder="Description"></textarea>
+            </div>
             <div class="custom-inputfield">
                 <button class="custom-btn" type="submit">Add Movie</button>
             </div>
