--- a/templates/admin/adminregister.html
+++ b/templates/admin/adminregister.html
@@ -1,8 +1,10 @@
-{% extends 'authentication/base.html' %}
+{% extends "admin/base.html" %}
 {% block content %}
     <div class="custom-wrapper">
-        <div class="custom-title"><b>Login Form</b></div>
-        <form class="form" method="post">
+        <div class="custom-title">
+            <b>Register New Admin</b>
+        </div>
+        <form method="post" class="form">
             {% if messages %}
                 <div class="alert alert-danger">
                     {% for message in messages %}
@@ -12,6 +14,10 @@
             {% endif %}
             {% csrf_token %}
             <div class="custom-inputfield">
+                <label class="custom-label"><b>Username</b></label>
+                <input class="custom-input" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="custom-inputfield">
                 <label class="custom-label"><b>Email</b></label>
                 <input class="custom-input" type="text" name="email" placeholder="Email">
             </div>
@@ -20,12 +26,9 @@
                 <input class="custom-input" type="password" name="password" placeholder="Password">
             </div>
             <div class="custom-inputfield">
-                <button class="custom-btn" type="submit">Login</button>
+                <button class="custom-btn" type="submit">Register</button>
             </div>
-
-
         </form>
-        <br><span>Don't have an account? </span><a href="{% url 'register' %}" ><b>Register</b></a><span> here.</span>
     </div>
 
 {% endblock %}
